# AndroSleuth

./: .gitignore  README.md  pyproject.toml
andro_sleuth/: setup.py
andro_sleuth/andro_sleuth_core/: __main__.py  andro_sleuth.py  apk.py  args.py  cli.py  main.py
andro_sleuth/andro_sleuth_development/: requirements.txt  setup.cfg
andro_sleuth/andro_sleuth_development/module_template/: cookiecutter.json
andro_sleuth/andro_sleuth_development/module_template/{{cookiecutter.module_name}}_module/: README.md
andro_sleuth/andro_sleuth_development/module_template/{{cookiecutter.module_name}}_module/frida_scripts/: {{cookiecutter.frida_script}}.json
andro_sleuth/andro_sleuth_modules/: modules.py
andro_sleuth/andro_sleuth_modules/crypto_parser_module/: crypto_parser.py
andro_sleuth/andro_sleuth_modules/crypto_parser_module/frida_scripts/: crypto_script.json
andro_sleuth/andro_sleuth_modules/frida_module/: frida.py
andro_sleuth/andro_sleuth_modules/mallodroid_module/: README.md  mallodroid.py
andro_sleuth/andro_sleuth_modules/mallodroid_module/frida_scripts/: mallodroid_tracer.json
andro_sleuth/andro_sleuth_modules/package_parse_module/: package_parser.py
